packages/svelte/tests/validator/samples/binding-import-element/input.svelte
<script>
	import { dummy } from './dummy.js';
</script>

<input bind:value={dummy}>
